--- a/packages/generator/build.yaml
+++ b/packages/generator/build.yaml
@@ -2,6 +2,6 @@ builders:
   ice:
     import: "package:field_keys/field_keys.dart"
     builder_factories: ["fieldKeysBuilder"]
-    build_extensions: { ".dart": ["keys.dart"] }
+    build_extensions: { ".dart": [".keys.dart"] }
     auto_apply: dependents
     build_to: source
