--- a/packages/generator/pubspec.yaml
+++ b/packages/generator/pubspec.yaml
@@ -18,5 +18,7 @@ dependencies:
   source_helper: ^1.3.1
 
 dev_dependencies:
+  generator_test:
+    git: https://github.com/mrgnhnt96/generator_test
   test: ^1.16.0
   very_good_analysis: ^2.4.0
