--- a/packages/generator/build.yaml
+++ b/packages/generator/build.yaml
@@ -1,7 +1,10 @@
 builders:
   ice:
     import: "package:field_keys/field_keys.dart"
-    builder_factories: ["fieldKeysBuilder"]
-    build_extensions: { ".dart": [".keys.dart"] }
+    builder_factories:
+      - fieldKeysBuilder
+    build_extensions:
+      .dart:
+        - .keys.dart
     auto_apply: dependents
     build_to: source
