--- a/packages/generator/build.yaml
+++ b/packages/generator/build.yaml
@@ -1,5 +1,5 @@
 builders:
-  ice:
+  field_keys:
     import: "package:field_keys/field_keys.dart"
     builder_factories:
       - fieldKeysBuilder
