--- a/packages/generator/example/build.yaml
+++ b/packages/generator/example/build.yaml
@@ -1,7 +1,7 @@
 targets:
   $default:
     builders:
-      field_keys:
+      fields:
         enabled: true
         options:
           format_output: true
