--- a/packages/generator/example/pubspec.yaml
+++ b/packages/generator/example/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 dependencies:
   fields_annotation:
     path: ../../annotation
+  json_annotation: ^4.4.0
 
 dev_dependencies:
   build_runner: ^2.1.7
