refactor: change package name to class_fields

--- a/packages/annotation/pubspec.yaml
+++ b/packages/annotation/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fields_annotation
+name: class_fields_annotation
 description: The annotation package for the fields generator. Generate all field names as Strings
 version: 0.0.1
 publish_to: none
