--- a/packages/generator/pubspec.yaml
+++ b/packages/generator/pubspec.yaml
@@ -1,4 +1,4 @@
-name: fields
+name: class_fields
 description: Generate all field names as Strings to use within Maps, serialization, etc.
 version: 0.0.1
 publish_to: none
@@ -10,7 +10,7 @@ environment:
 dependencies:
   analyzer: ^3.1.0
   build_config: ^1.0.0
-  fields_annotation:
+  class_fields_annotation:
     path: ../annotation
   meta: ^1.7.0
   source_gen: ^1.2.1
