--- a/packages/generator/build.yaml
+++ b/packages/generator/build.yaml
@@ -5,6 +5,7 @@ builders:
       - fieldsBuilder
     build_extensions:
       .dart:
-        - .f.dart
+        - class_fields.g.part
     auto_apply: dependents
-    build_to: source
+    build_to: cache
+    applies_builders: ["source_gen|combining_builder"]
