feat: add req files  for publish

--- a/packages/annotation/pubspec.yaml
+++ b/packages/annotation/pubspec.yaml
@@ -2,6 +2,8 @@ name: class_fields_annotation
 description: The annotation package for the fields generator. Generate all field names as Strings
 version: 0.0.1
 publish_to: none
+repository: https://github.com/mrgnhnt96/class_fields/tree/master/packages/annotation
+homepage: https://github.com/mrgnhnt96/class_fields
 
 environment:
   sdk: '>=2.15.1 <3.0.0'
