--- a/packages/generator/pubspec.yaml
+++ b/packages/generator/pubspec.yaml
@@ -2,7 +2,8 @@ name: class_fields
 description: Generate all field names as Strings to use within Maps, serialization, etc.
 version: 0.0.1
 publish_to: none
-# homepage: https://www.example.com
+repository: https://github.com/mrgnhnt96/class_fields/tree/master/packages/annotation
+homepage: https://github.com/mrgnhnt96/class_fields
 
 environment:
   sdk: '>=2.15.1 <3.0.0'
