--- a/packages/class_fields_generator/pubspec.yaml
+++ b/packages/class_fields_generator/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 
 dependencies:
   analyzer: ^3.1.0
+  build: ^2.2.1
   build_config: ^1.0.0
   class_fields_annotation: ">=0.1.0 <0.2.0"
   # class_fields_annotation:
