--- a/packages/class_fields_generator/pubspec.yaml
+++ b/packages/class_fields_generator/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   sdk: '>=2.15.1 <3.0.0'
 
 dependencies:
-  analyzer: ^3.1.0
+  analyzer: ">=3.1.0 <6.0.0"
   build: ^2.2.1
   class_fields_annotation: ">=0.1.0 <0.2.0"
   # class_fields_annotation:
